# whatsapp-person-image-extractor

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
scripts/: extract_all.py  find_person.py  serve.py  visualize_detections.py
src/face_finder/: config.py  pipeline.py
src/face_finder/faces/: __init__.py  analyzer.py  matcher.py
src/face_finder/utils/: __init__.py  media.py
src/face_finder/visualization/: __init__.py  draw.py
src/face_finder/web/: app.py
src/face_finder/web/templates/: index.html
